temas 3 y 4/ejem-6-flagger-flyway/db-deployment-copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: zerodowntime2
        image: docker.io/mysql:5.7
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db2
  labels:
    app: db2
spec:
  ports:
  - port: 3306
    name: http
  selector:
    app: db2
