temas 3 y 4/ejem-6-flagger-flyway/db-deployment-copy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db3
  template:
    metadata:
      labels:
        app: db3
    spec:
      containers:
      - name: zerodowntime3
        image: docker.io/mysql:5.7
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db3
  labels:
    app: db3
spec:
  ports:
  - port: 3306
    name: http
    targetPort: 3306
    protocol: TCP
  selector:
    app: db3
  type: ClusterIP
