temas 3 y 4/ejem-6-flagger-flyway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerodowntime
  labels:
    app: zerodowntime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zerodowntime
  template:
    metadata:
      labels:
        app: zerodowntime
    spec:
      containers:
      - name: zerodowntime
        image: docker.io/gortazar/flyway:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 9991
---
apiVersion: v1
kind: Service
metadata:
  name: zerodowntime
  labels:
    app: zerodowntime
spec:
  ports:
  - port: 9991
    name: http
  selector:
    app: zerodowntime
