temas 3 y 4/ejem-6-flagger-flyway/db-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3306
        protocol: MYSQL
        name: mysql
      hosts:
        - "*"
