temas 3 y 4/ejem-6-flagger-flyway/zerodowntime-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zerodowntime
  namespace: zero
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - timeout: 50s
    route:
    - destination:
        host: zerodowntime.zero.svc.cluster.local
